commit moved experience and about to columns at top of page, placed pic in header

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 <body>
 <!---        Header/Nav        -->
     <header class="head">
-        <h1 id="header-h1">Benjamin Closson</h1>
-        <h4 id="header-h4">Sofware Developer</h4>
+        <div class="row" id="title-row">
+            <div class="column" id="col-pic">
+                <img id="profile-pic" src="images/head shot professional.jpg" alt="profile photo">
+            </div>    
+            <div class="column" id="col-name">
+                <h1 id="header-h1">Benjamin Closson</h1>
+                <h4 id="header-h4">Sofware Developer</h4>
+            </div>            
+        </div>
         <nav class="nav">
             <ul class="nav-ul">
                 <a id="link" href="#about-section"><li class="nav-link">About</li></a>
@@ -25,16 +32,29 @@
     <main>
         <div>
         <!--    About Section        -->
-                <section class="about" id="about-section">
-                    <img id="profile-pic" src="images/head shot professional.jpg" alt="profile photo"> 
-                    <article>
+                <section class="row" id="about-section">
+                     
+                    <article class="column" id="about">
                         <h3 id="about-h3">About Me</h3>
                         <p id="about-p">I am a full stack developer with a background in the hospitality industry.  I am passionate about creating exceptional experiences and developing programs to enrich the lives of clients and users.  I have the desire to join a people focused organization as a developer that strives to make user experiences approachable and easy to navigate.</p>
                     <br>
                     <br>
-                        <p id="about-p">I offer a unique perspective coming from a customer focused industry in Hospitality, where being able to anticipate the needs of clients and colleagues is imperative to delivering hte best experiences, as well as being able to adjust to changing environmets rapidly given the needs of the moment.  I love helpig people relize their value, creating great experiences for clients, and working creaatively to solve problems that may not have obvious solutions.  I believe in hard work, focus, respectful communication, teamwork, and striving to keep buiding on knowledge and skills.</p>
+                        I offer a unique perspective coming from a customer focused industry in Hospitality, where being able to anticipate the needs of clients and colleagues is imperative to delivering hte best experiences, as well as being able to adjust to changing environmets rapidly given the needs of the moment.  I love helpig people relize their value, creating great experiences for clients, and working creaatively to solve problems that may not have obvious solutions.  I believe in hard work, focus, respectful communication, teamwork, and striving to keep buiding on knowledge and skills.
                         <br>
-                        <p id="about-p">My interests outside of programming I enjoy spending my time cooking, dining, going to the theatre and sporting events, hiking, biking, running with my dogs, climbing, and pretty much everything that has to do with being active in the outdoors.</p>
+                        My interests outside of programming I enjoy spending my time cooking, dining, going to the theatre and sporting events, hiking, biking, running with my dogs, climbing, and pretty much everything that has to do with being active in the outdoors.
+                    </article>
+
+                    <article class="column" id="experience">
+                        <h3 id="about-h3">Experience</h3>
+                        <p id="about-p">A seasoned professional with 17 years in product development, people management, relationship building, P&L management/cost controls, procurement, team building, hiring, training, operational systems management, and customer experience customization in small private to large corporate environments.</p><br>
+                        <article><strong>Hotel 1000, All Water Seafood and Oyster Bar 
+                        Seattle, WA</strong><br>
+                        Executive Chef March 2018 – March 2020<br>
+                        <strong>Heathman Hotel/Trellis Kirkland, WA</strong><br>
+                        Executive Chef 2017 – 2018<br>
+                        <strong>Nordstrom Seattle, WA</strong><br>
+                        Executive Chef 2012 – 2017
+                    </article>
                     </article>
                 </section>
 
@@ -91,17 +111,7 @@
 
         <!--    Experience Section-->
                 <h3>Experience</h3>
-                <section class="experience" id="resume">
-                    <p>A seasoned professional with 17 years in product development, people management, relationship building, P&L management/cost controls, procurement, team building, hiring, training, operational systems management, and customer experience customization in small private to large corporate environments.</p><br>
-                    <article><strong>Hotel 1000, All Water Seafood and Oyster Bar 
-                    Seattle, WA</strong><br>
-                    Executive Chef March 2018 – March 2020<br>
-                    <strong>Heathman Hotel/Trellis Kirkland, WA</strong><br>
-                    Executive Chef 2017 – 2018<br>
-                    <strong>Nordstrom Seattle, WA</strong><br>
-                    Executive Chef 2012 – 2017
-                    </article>
-                </section>
+                
 
             <!-- CONTACT SECTION -->
                 <h3>Contact Benjamin</h3>
