commit changed font

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet">
     <script defer src="./script/app.js"></script>
     <title>Benjamin Closson</title>
 </head>
@@ -17,6 +19,7 @@
             <div class="column" id="col-name">
                 <h1 id="header-h1">Benjamin Closson</h1>
                 <h4 id="header-h4">Sofware Developer</h4>
+                <h4 id="header-h4">Seattle, WA</h4>
             </div>            
         </div>
         <nav class="nav">
@@ -49,6 +52,7 @@
                         <h3 id="about-h3">Experience</h3>
                         <p id="about-p">A seasoned professional with 17 years in product development, people management, relationship building, P&L management/cost controls, procurement, team building, hiring, training, operational systems management, and customer experience customization in small private to large corporate environments.<br> Completing General Assembly's Sofware Engineering Bootcamp in early December 2020 I have gained skills and knowledge in JavaScript, React.js, jQuery, Express, Node.js, EJS, Python, Django, postgreSQL, mongoDB, HTML, CSS<br>
                         <br>
+                        <h3>Recent Roles</h4>
                         <strong>Hotel 1000, All Water Seafood and Oyster Bar 
                         Seattle, WA</strong><br>
                         Executive Chef March 2018 – March 2020<br>
