commit adjusted positioning, styled contact button, edited about me

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <section class="row" id="about-section">                    
                     <article class="column" id="about">
                         <h3 id="about-h3">About Me</h3>
-                        <p id="about-p">I am a full stack developer with a background in the hospitality industry.  I am passionate about creating exceptional experiences and developing programs to enrich the lives of clients and users.  I have the desire to join a people focused organization as a developer that strives to make user experiences approachable and easy to navigate.
+                        <p id="about-p">I am a full stack developer with a background in the hospitality industry.  I am passionate about creating exceptional experiences and developing programs to enrich the lives of clients and users.  I have the desire to join an organization as a developer that is people focused and that strives to make user experiences approachable and easy to navigate.
                     <br>
                     <br>
                         I offer a unique perspective coming from a customer focused industry in Hospitality, where being able to anticipate the needs of clients and colleagues is imperative to delivering hte best experiences, as well as being able to adjust to changing environmets rapidly given the needs of the moment.  I love helpig people relize their value, creating great experiences for clients, and working creaatively to solve problems that may not have obvious solutions.  I believe in hard work, focus, respectful communication, teamwork, and striving to keep buiding on knowledge and skills.
