--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </section>
 
         <!--    Project Section/Slideshow Container     -->
-            <h3 id="p-c-h3">Projects</h3>
+            <h3 id="p-c-h3">My Projects</h3>
             <div class="slideshow-container" id="projects-container">
 
             <!--  Full-Width images with number and caption text -->
@@ -74,28 +74,28 @@
                         <div id="img-div">
                             <a href="https://serene-shore-87850.herokuapp.com" target="_blank"><img id="slide-img" src="images/Utilize!.jpg" alt="Utilize!"></a>
                         </div>
-                        <div class="text"></div>
+                        <div class="text">This app helps you Utilize items in your kitchen by returning recipes when you input your ingredients on hand! Technologies Used: React.js, Redux, Express, Node.js, MongoDB, Materialize, Edamam API</div>
                 </div> 
 
                 <div class="projects fade" id="projects">    
                         <div id="img-div"> 
                             <a href="https://project2-wayfair.herokuapp.com/" target="_blank"><img id="slide-img" src="images/Wayfarer.jpg" alt="Wayfarer Project"></a>
                         </div>
-                    <div class="text"></div>
+                    <div class="text">This app is a blog style travel app, so you can be a part of a travel community. Technologies Used: Python, Django, postgreSQL, Materialize</div>
                 </div> 
 
                 <div class="projects fade" id="projects">   
                         <div id="img-div">
                             <a href="https://peaceful-springs-79098.herokuapp.com/" target="_blank"><img id="slide-img" src="images/Fitness-Tracker.jpg" alt="Fitness Tracker Project"></a>
                         </div>
-                    <div class="text"></div>
+                    <div class="text">This is an app designed to help you track your workouts, and maintain your fitness goals. Technologies Used: Express, EJS, Node.js, MongoDB, Bootstrap</div>
                 </div> 
 
                 <div class="projects fade" id="projects">    
-                        <div id="img-div">
+                        <div id="img-div">      
                             <a href="https://bclosson.github.io/Tamagotchi-Project/" target="_blank"><img id="slide-img" src="images/Tamagotchi.jpg" alt="Tamagotchi Project"></a>
                         </div>
-                    <div class="text"></div>
+                    <div class="text">This is a simple timer-based game that is a spin-off from the handheld Tamagotchi games.  Technologies Used: HTML, CSS, jQuery</div>
                 </div> 
 
 
