commit fixed typos in about me

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             ><li class="nav-link">Projects</li></a
           >
           <a id="link" href="#resume"><li class="nav-link">Experience</li></a>
-          <a id="link" href="#contact"><li class="nav-link">Contact</li></a>
+          <a id="link" href="#contactBtn"><li class="nav-link">Contact</li></a>
         </ul>
       </nav>
     </header>
@@ -60,17 +60,17 @@
               industry in Hospitality, where being able to anticipate the needs
               of clients and colleagues is imperative to delivering hte best
               experiences, as well as being able to adjust to changing
-              environmets rapidly given the needs of the moment. I love helpig
-              people relize their value, creating great experiences for clients,
-              and working creaatively to solve problems that may not have
-              obvious solutions. I believe in hard work, focus, respectful
+              environmets rapidly given the needs of the moment. I love helping
+              people realize their value, creating great experiences for
+              clients, and working creatively to solve problems that may not
+              have obvious solutions. I believe in hard work, focus, respectful
               communication, teamwork, and striving to keep buiding on knowledge
               and skills.
               <br />
-              My interests outside of programming I enjoy spending my time
-              cooking, dining, going to the theatre and sporting events, hiking,
-              biking, running with my dogs, climbing, and pretty much everything
-              that has to do with being active in the outdoors.
+              When I'm not programming I enjoy spending my time cooking, dining,
+              going to the theatre and sporting events, hiking, biking, running
+              with my dogs, climbing, and pretty much everything that has to do
+              with being active in the outdoors.
             </p>
           </article>
 
