commit revised social icon formatting

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
     <script defer src="./script/app.js"></script>
     <title>Benjamin Closson</title>
   </head>
@@ -51,8 +57,8 @@
               industry. I am passionate about creating exceptional experiences
               and developing programs to enrich the lives of clients and users.
               I have the desire to join an organization as a developer that is
-              people focused and that strives to make user experiences
-              approachable and easy to navigate.
+              has a great culture, strives for excellence, and works to make
+              user experiences easy to navigate.
               <br />
               <br />
               I offer a unique perspective coming from a customer focused
@@ -230,11 +236,12 @@
       <footer>
         <ul class="footer-ul">
           <a id="link" href="https://github.com/bclosson"
-            ><li class="github">Github</li></a
-          >
+            ><li class="github"><i class="fab fa-github-square"></i></li
+          ></a>
+
           <a id="link" href="https://www.linkedin.com/in/benjamin-closson/"
-            ><li class="linked-in">LinkedIn</li></a
-          >
+            ><li class="linked-in"><i class="fab fa-linkedin"></i></li
+          ></a>
         </ul>
       </footer>
     </main>
