--- a/index.html
+++ b/index.html
@@ -110,10 +110,9 @@
         </section>
 
         <!--    Project Section/Slideshow Container     -->
+        <!--
         <h3 id="p-c-h3">My Projects</h3>
         <div class="slideshow-container" id="projects-container">
-          <!--  Full-Width images with number and caption text -->
-
           <div class="projects fade" id="projects">
             <div id="img-div">
               <a href="https://serene-shore-87850.herokuapp.com" target="_blank"
@@ -178,7 +177,77 @@
               handheld Tamagotchi games. Technologies Used: HTML, CSS, jQuery
             </div>
           </div>
-
+            -->
+    <h3 id="about-h3">Projects</h3>
+        <section class="row">
+            <article class="column" id="project1_3">
+                <h4>Utilize!</h3>
+                <div class="projects fade" id="projects">
+            <div id="img-div">
+              <a href="https://serene-shore-87850.herokuapp.com" target="_blank"
+                ><img id="slide-img" src="images/Utilize!.jpg" alt="Utilize!"
+              /></a>
+            </div>
+            <div class="text">
+              This app helps you Utilize items in your kitchen by returning
+              recipes when you input your ingredients on hand! Technologies
+              Used: React.js, Redux, Express, Node.js, MongoDB, Materialize,
+              Edamam API
+            </div>
+          </div>
+            </article>
+            <article class="column" id="project2_4">
+                <h4>Wayfarer</h3>
+                <div id="img-div">
+              <a href="https://project2-wayfair.herokuapp.com/" target="_blank"
+                ><img
+                  id="slide-img"
+                  src="images/Wayfarer.jpg"
+                  alt="Wayfarer Project"
+              /></a>
+            </div>
+            <div class="text">
+              This app is a blog style travel app, so you can be a part of a
+              travel community. Technologies Used: Python, Django, postgreSQL,
+              Materialize
+            </div>
+            </article>
+            <article class="column" id="project1_3">
+                <h4>Fitness Tracker</h3>
+                <div id="img-div">
+              <a
+                href="https://peaceful-springs-79098.herokuapp.com/"
+                target="_blank"
+                ><img
+                  id="slide-img"
+                  src="images/Fitness-Tracker.jpg"
+                  alt="Fitness Tracker Project"
+              /></a>
+            </div>
+            <div class="text">
+              This is an app designed to help you track your workouts, and
+              maintain your fitness goals. Technologies Used: Express, EJS,
+              Node.js, MongoDB, Bootstrap
+            </div>
+            </article>
+            <article class="column" id="project2_4">
+                <h4>Tamagotchi Game</h3>
+                <div id="img-div">
+              <a
+                href="https://bclosson.github.io/Tamagotchi-Project/"
+                target="_blank"
+                ><img
+                  id="slide-img"
+                  src="images/Tamagotchi.jpg"
+                  alt="Tamagotchi Project"
+              /></a>
+            </div>
+            <div class="text">
+              This is a simple timer-based game that is a spin-off from the
+              handheld Tamagotchi games. Technologies Used: HTML, CSS, jQuery
+            </div>
+            </article>
+        </section>
           <!--  Next and Previous buttons  -->
           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
           <a class="next" onclick="plusSlides(1)">&#10095;</a>
