positioning project divs

--- a/index.html
+++ b/index.html
@@ -179,35 +179,35 @@
           </div>
             -->
     <h3 id="about-h3">Projects</h3>
-        <section class="row">
+        <section class="row" id="projects-section">
             <article class="column" id="project1_3">
                 <h4>Utilize!</h3>
-                <div class="projects fade" id="projects">
-            <div id="img-div">
-              <a href="https://serene-shore-87850.herokuapp.com" target="_blank"
-                ><img id="slide-img" src="images/Utilize!.jpg" alt="Utilize!"
-              /></a>
-            </div>
-            <div class="text">
-              This app helps you Utilize items in your kitchen by returning
-              recipes when you input your ingredients on hand! Technologies
-              Used: React.js, Redux, Express, Node.js, MongoDB, Materialize,
-              Edamam API
-            </div>
-          </div>
+                    <div class="column" id="text">
+                    Utilize! helps you use items in your kitchen by returning
+                    recipes when you input your ingredients on hand! Technologies
+                    Used: React.js, Redux, Express, Node.js, MongoDB, Materialize,
+                    Edamam API
+                    </div>
+                <div class="row">
+                    <div id="img-div">
+                        <a href="https://serene-shore-87850.herokuapp.com" target="_blank"
+                            ><img id="img" src="images/Utilize!.jpg" alt="Utilize!"
+                        /></a>
+                    </div>
+                </div>
             </article>
             <article class="column" id="project2_4">
                 <h4>Wayfarer</h3>
                 <div id="img-div">
               <a href="https://project2-wayfair.herokuapp.com/" target="_blank"
                 ><img
-                  id="slide-img"
+                  id="img"
                   src="images/Wayfarer.jpg"
                   alt="Wayfarer Project"
               /></a>
             </div>
-            <div class="text">
-              This app is a blog style travel app, so you can be a part of a
+            <div class="column" id="text">
+              Wayfarer is a blog style travel app, so you can be a part of a
               travel community. Technologies Used: Python, Django, postgreSQL,
               Materialize
             </div>
@@ -219,13 +219,13 @@
                 href="https://peaceful-springs-79098.herokuapp.com/"
                 target="_blank"
                 ><img
-                  id="slide-img"
+                  id="img"
                   src="images/Fitness-Tracker.jpg"
                   alt="Fitness Tracker Project"
               /></a>
             </div>
-            <div class="text">
-              This is an app designed to help you track your workouts, and
+            <div class="column" id="text">
+              Fitness Tracker is an app designed to help you track your workouts, and
               maintain your fitness goals. Technologies Used: Express, EJS,
               Node.js, MongoDB, Bootstrap
             </div>
@@ -237,13 +237,13 @@
                 href="https://bclosson.github.io/Tamagotchi-Project/"
                 target="_blank"
                 ><img
-                  id="slide-img"
+                  id="img"
                   src="images/Tamagotchi.jpg"
                   alt="Tamagotchi Project"
               /></a>
             </div>
-            <div class="text">
-              This is a simple timer-based game that is a spin-off from the
+            <div class="column" id="text">
+              Tamagotchi is a simple timer-based game that is a spin-off from the
               handheld Tamagotchi games. Technologies Used: HTML, CSS, jQuery
             </div>
             </article>
