commit added hover effect to project link images

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
       <nav class="nav">
         <ul class="nav-ul">
           <a id="link" href="#about-section"><li class="nav-link">About</li></a>
-          <a id="link" href="#projects-container"
-            ><li class="nav-link">Projects</li></a
-          >
+          <a id="link" href="#project-h3"><li class="nav-link">Projects</li></a>
           <a id="link" href="#contactBtn"><li class="nav-link">Contact</li></a>
         </ul>
       </nav>
@@ -62,15 +60,14 @@
               <br />
               <br />
               I offer a unique perspective coming from a customer focused
-              industry in Hospitality, where being able to anticipate the needs
-              of clients and colleagues is imperative to delivering hte best
-              experiences, as well as being able to adjust to changing
-              environmets rapidly given the needs of the moment. I love helping
-              people realize their value, creating great experiences for
-              clients, and working creatively to solve problems that may not
-              have obvious solutions. I believe in hard work, focus, respectful
-              communication, teamwork, and striving to keep buiding on knowledge
-              and skills.
+              industry, where being able to anticipate the needs of clients and
+              colleagues is imperative to delivering the best experiences, as
+              well as being able to adjust to changing environmets rapidly given
+              the needs of the moment. I love helping people realize their
+              value, creating great experiences for clients, and working
+              creatively to solve problems that may not have obvious solutions.
+              I believe in hard work, focus, respectful communication, teamwork,
+              and striving to keep buiding on knowledge and skills.
               <br />
               When I'm not programming I enjoy spending my time cooking, dining,
               going to the theatre and sporting events, hiking, biking, running
@@ -109,7 +106,7 @@
           </article>
         </section>
 
-        <h3 id="about-h3">Projects</h3>
+        <h3 id="projects-title">Projects</h3>
         <section class="row" id="projects-section">
           <article class="column" id="project1_3">
             <h3 id="project-h3">Utilize!</h3>
