commit added target to social links

--- a/index.html
+++ b/index.html
@@ -223,11 +223,14 @@
 
       <footer>
         <ul class="footer-ul">
-          <a id="link" href="https://github.com/bclosson"
+          <a id="link" target="_blank" href="https://github.com/bclosson"
             ><li class="github"><i class="fab fa-github-square"></i></li
           ></a>
 
-          <a id="link" href="https://www.linkedin.com/in/benjamin-closson/"
+          <a
+            id="link"
+            target="_blank"
+            href="https://www.linkedin.com/in/benjamin-closson/"
             ><li class="linked-in"><i class="fab fa-linkedin"></i></li
           ></a>
         </ul>
