commit revised text in experience

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
               operational systems management, and customer experience
               customization in small private to large corporate environments.<br />
               Completing General Assembly's Sofware Engineering Bootcamp in
-              early December 2020 I have gained skills and knowledge in
-              JavaScript, React.js, jQuery, Express, Node.js, EJS, Python,
-              Django, postgreSQL, mongoDB, HTML, CSS<br />
+              December 2020 I have gained skills and knowledge in JavaScript,
+              React.js, jQuery, Express, Node.js, EJS, Python, Django,
+              postgreSQL, mongoDB, HTML, CSS<br />
               <br />
             </p>
             <h3 id="about-h3">Recent Roles</h3>
