--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 ></textarea>
               </label>
 
-              <!-- your other form fields go here -->
+              <!-- submit contact info button -->
 
               <button type="submit" id="contact-button">Send</button>
             </form>
