--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           <a
             id="link"
             target="_blank"
-            href="https://www.linkedin.com/in/benjamin-closson/"
+            href="www.linkedin.com/in/benjamin-closson"
             ><li class="linked-in"><i class="fab fa-linkedin"></i></li
           ></a>
         </ul>
